@@ -35,21 +35,19 @@ If you really want to compile, you'll need the followings:
 
 0. set JAVA_HOME environment variable
 1. Change the path of WTK_HOME in .ant.properties file.
-2. ant jar
-3. Change the jar file size in the jad file (j2me_reversi.jad) [This
-is not necessary for me, but the program may not work without this]
+2. ant
 
 How to compile with obfuscator?
 -------------------------------
 
 If you use obfuscator, the size of the jar file will be smaller. Currently
-the build process can use only one obfuscator: RetroGuard-1.1
+the build process can use two obfuscators: ProGuard-1.4 and RetroGuard-1.1
 
 0. set JAVA_HOME environment variable
-1. Change the path of RETROGUARD_HOME in .ant.properties file. 
-2. ant compactjar
-3. Change the jar file size in the jad file (j2me_reversi.jad) [This
-is not necessary for me, but the program may not work without this]
+1. Change the path of RETROGUARD_HOME or PROGUARD_JAR in .ant.properties file. 
+2. Change the obfuscate_null to obfucate_proguard or obfuscate_retroguard in line 
+   <target name="unjar" depends="obfuscate_null"> in build.xml
+3. ant
 
 NOTE: RetroGuard-1.1 is not working for me with J2SDK 1.4.1 for Linux
 
